--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="particulas"></div>
     <nav class="navegacao">
       <div class="btn-contato">
-        <a href="/img/Curriculo.pdf" class="" download> Baixar CV </a>
+        <a href="/img/cv.pdf" class="" download> Baixar CV </a>
       </div>
       <ul class="menu">
         <li>
@@ -34,7 +34,7 @@
         <img src="img/se.png" alt="Foto do Bartolomeu" class="foto-perfil" />
         <h1>Bartolomeu Cassoma Gaspar João</h1>
         <p class="cabecalho-subtitulo">Software Developer</p>
-        <a href="/img/Curriculo.pdf" class="botao-cv" download>Download CV</a>
+        <a href="/img/cv.pdf" class="botao-cv" download>Download CV</a>
       </div>
     </main>
     <section id="habilidades" class="habilidades">
