--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <div class="particulas"></div>
     <nav class="navegacao">
       <div class="btn-contato">
-        <a href="/img/cv.pdf" class="" download> Baixar CV </a>
+        <a href="/img/Curriculo.pdf" class="" download> Baixar CV </a>
       </div>
-      <ul class="menu">
+      <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+      <ul class="menu" id="menu">
         <li>
           <a href="#inicio" class="menu-link"> Início </a>
         </li>
@@ -34,7 +35,7 @@
         <img src="img/se.png" alt="Foto do Bartolomeu" class="foto-perfil" />
         <h1>Bartolomeu Cassoma Gaspar João</h1>
         <p class="cabecalho-subtitulo">Software Developer</p>
-        <a href="/img/cv.pdf" class="botao-cv" download>Download CV</a>
+        <a href="/img/Curriculo.pdf" class="botao-cv" download>Download CV</a>
       </div>
     </main>
     <section id="habilidades" class="habilidades">
@@ -307,6 +308,11 @@
       </form>
     </section>
     <script>
+      function toggleMenu() {
+        const menu = document.getElementById('menu');
+        menu.classList.toggle('active');
+      }
+
       function enviarMsg(event) {
         event.preventDefault();
         const nome = document.getElementById("Nome").value;
