--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="particulas"></div>
     <nav class="navegacao">
       <div class="btn-contato">
-        <a href="img/Curriculo.pdf" class="" download> Baixar CV </a>
+        <a href="img/cv.pdf" class="" download="cv.pdf" type="application/pdf"> Baixar CV </a>
       </div>
       <button class="menu-toggle" onclick="toggleMenu()">☰</button>
       <ul class="menu" id="menu">
