--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <img src="img/se.png" alt="Foto do Bartolomeu" class="foto-perfil" />
         <h1>Bartolomeu Cassoma Gaspar João</h1>
         <p class="cabecalho-subtitulo">Software Developer</p>
-        <a href="img/Curriculo.pdf" class="botao-cv" download>Download CV</a>
+        <a href="img/cv.pdf" class="botao-cv" download="cv.pdf" type="application/pdf">Download CV</a>
       </div>
     </main>
     <section id="habilidades" class="habilidades">
