adicionando um projecto

--- a/index.html
+++ b/index.html
@@ -163,15 +163,14 @@
       <div class="projectos-caixa">
         <div class="projectos-card">
           <img
-            src="img/projeto1.png"
-            alt="projecto 1"
+            src="img/projecto4.png"
+            alt="projecto 4"
             class="projecto-imagem"
           />
           <div class="caixa-texto-projectos">
-            <h3 class="info-projectos">Loja de Carros</h3>
+            <h3 class="info-projectos">SmartQuote RCS</h3>
             <p class="paragrafo-projectos">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque
-              nam illum eligendi similique eius laudantium.
+              O SmartQuote RCS é uma aplicação web moderna e responsiva para gestão inteligente de cotações, desenvolvida com tecnologias de ponta. O sistema oferece automação completa do processo de cotações, desde a criação até a aprovação, com integração de IA para busca de produtos e comparação de preços.
             </p>
           </div>
         </div>
