--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       <div class="projectos-caixa">
         <div class="projectos-card">
           <img
-            src="img/projecto4.png"
+            src="img/projeto4.png"
             alt="projecto 4"
             class="projecto-imagem"
           />
