--- a/index.html
+++ b/index.html
@@ -177,15 +177,13 @@
 
         <div class="projectos-card">
           <img
-            src="img/projeto2.png"
+            src="img/projeto5.png"
             alt="projecto 2"
             class="projecto-imagem"
           />
           <div class="caixa-texto-projectos">
-            <h3 class="info-projectos">Loja de Mobilias</h3>
-            <p class="paragrafo-projectos">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque
-              nam illum eligendi similique eius laudantium.
+            <h3 class="info-projectos">Sistema de Administração Escolar</h3>
+            <p class="paragrafo-projectos">Sistema de administração escolar desenvolvido para facilitar a gestão acadêmica, incluindo controle de alunos, turmas, professores e notas. Oferece uma interface intuitiva e funcionalidades que otimizam o fluxo de trabalho da instituição.
             </p>
           </div>
         </div>
