--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           <div class="caixa-texto-projectos">
             <h3 class="info-projectos">SmartQuote RCS</h3>
             <p class="paragrafo-projectos">
-              O SmartQuote RCS é uma aplicação web moderna e responsiva para gestão inteligente de cotações, desenvolvida com tecnologias de ponta. O sistema oferece automação completa do processo de cotações, desde a criação até a aprovação, com integração de IA para busca de produtos e comparação de preços.
+              O SmartQuote RCS é uma aplicação web moderna e responsiva para gestão inteligente de cotações, desenvolvida com tecnologias de ponta. O sistema oferece automação completa do processo de cotações, desde a criação até a aprovação, com integração de IA para busca de produtos e comparação de preços. 
             </p>
           </div>
         </div>
@@ -183,7 +183,7 @@
           />
           <div class="caixa-texto-projectos">
             <h3 class="info-projectos">Sistema de Administração Escolar</h3>
-            <p class="paragrafo-projectos">Sistema de administração escolar desenvolvido para facilitar a gestão acadêmica, incluindo controle de alunos, turmas, professores e notas. Oferece uma interface intuitiva e funcionalidades que otimizam o fluxo de trabalho da instituição.
+            <p class="paragrafo-projectos">Sistema de administração escolar desenvolvido para facilitar a gestão acadêmica, incluindo controle de alunos, turmas, professores e notas. Oferece uma interface intuitiva e funcionalidades que otimizam o fluxo de trabalho da instituição.Desenvolvido com foco em usabilidade, segurança e eficiência no gerenciamento de dados administrativos.
             </p>
           </div>
         </div>
