Atualizando o título do projeto para "Sistema de Gestão Escolar"

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             class="projecto-imagem"
           />
           <div class="caixa-texto-projectos">
-            <h3 class="info-projectos">Sistema de Administração Escolar</h3>
+            <h3 class="info-projectos">Sistema de Gestão Escolar</h3>
             <p class="paragrafo-projectos">Sistema de administração escolar desenvolvido para facilitar a gestão acadêmica, incluindo controle de alunos, turmas, professores e notas. Oferece uma interface intuitiva e funcionalidades que otimizam o fluxo de trabalho da instituição.Desenvolvido com foco em usabilidade, segurança e eficiência no gerenciamento de dados administrativos.
             </p>
           </div>
