--- a/index.html
+++ b/index.html
@@ -158,36 +158,7 @@
     </section>
     <br><br><br>
     <section id="Projectos" class="Projectos">
-    <!-- Botão para abrir o modal de adicionar projeto -->
-    <button id="addProjectBtn" style="position:fixed;top:20px;right:20px;z-index:1000;">Adicionar Projeto</button>
-
-    <!-- Modal de cadastro de projeto -->
-    <div id="addProjectModal" style="display:none;position:fixed;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.5);z-index:2000;align-items:center;justify-content:center;">
-      <div style="background:#fff;padding:32px 28px 24px 28px;border-radius:16px;max-width:420px;width:90vw;box-shadow:0 8px 32px rgba(0,0,0,0.18);position:relative;display:flex;flex-direction:column;gap:16px;">
-        <h2 style="margin-bottom:8px;text-align:center;color:#222;font-size:1.5rem;">Adicionar Projeto</h2>
-        <form id="projectForm" style="display:flex;flex-direction:column;gap:12px;">
-          <label style="font-weight:500;color:#444;">Nome do Projeto:</label>
-          <input type="text" id="projectName" required style="padding:8px;border-radius:6px;border:1px solid #ccc;">
-
-          <label style="font-weight:500;color:#444;">Descrição:</label>
-          <textarea id="projectDesc" required style="padding:8px;border-radius:6px;border:1px solid #ccc;resize:vertical;"></textarea>
-
-          <label style="font-weight:500;color:#444;">Imagem do Projeto:</label>
-          <input type="file" id="projectImgFile" accept="image/*" style="padding:4px;">
-          <img id="previewImg" src="" alt="Prévia da imagem" style="display:none;max-width:100%;margin-top:6px;border-radius:8px;box-shadow:0 2px 8px rgba(0,0,0,0.08);">
-
-          <label style="font-weight:500;color:#444;">Link do Projeto:</label>
-          <input type="text" id="projectLink" required style="padding:8px;border-radius:6px;border:1px solid #ccc;">
-
-          <div style="display:flex;justify-content:flex-end;gap:10px;margin-top:10px;">
-            <button type="submit" style="background:#007bff;color:#fff;padding:8px 18px;border:none;border-radius:6px;cursor:pointer;font-weight:500;">Adicionar</button>
-            <button type="button" id="closeModalBtn" style="background:#eee;color:#333;padding:8px 18px;border:none;border-radius:6px;cursor:pointer;">Cancelar</button>
-          </div>
-        </form>
-      </div>
-    </div>
-
-    <h2 class="projectos-titulo">Meus Projectos</h2>
+      <h2 class="projectos-titulo">Meus Projectos</h2>
 
     <div class="projectos-caixa">
         <div class="projectos-card" onclick="openModal('modal1')">
@@ -528,99 +499,46 @@
         window.open(url, "_blank");
       }
 
-      // Modal de adicionar projeto melhorado
-      const addProjectBtn = document.getElementById('addProjectBtn');
-      const addProjectModal = document.getElementById('addProjectModal');
-      const closeModalBtn = document.getElementById('closeModalBtn');
-      const projectForm = document.getElementById('projectForm');
-      const projectImgFile = document.getElementById('projectImgFile');
-      const previewImg = document.getElementById('previewImg');
-
-      addProjectBtn.onclick = function() {
-        addProjectModal.style.display = 'flex';
-        document.body.style.overflow = 'hidden';
-      };
-
-      closeModalBtn.onclick = function() {
-        addProjectModal.style.display = 'none';
-        document.body.style.overflow = 'auto';
-        previewImg.style.display = 'none';
-        previewImg.src = '';
-      };
-
-      window.onclick = function(event) {
-        if (event.target === addProjectModal) {
-          addProjectModal.style.display = 'none';
-          document.body.style.overflow = 'auto';
-          previewImg.style.display = 'none';
-          previewImg.src = '';
+      // Funções para controlar os modais dos projetos
+      function openModal(modalId) {
+        const modal = document.getElementById(modalId);
+        if (modal) {
+          modal.style.display = 'block';
+          document.body.style.overflow = 'hidden';
         }
-      };
+      }
 
-      document.addEventListener('keydown', function(event) {
-        if (event.key === 'Escape' && addProjectModal.style.display === 'flex') {
-          addProjectModal.style.display = 'none';
+      function closeModal(modalId) {
+        const modal = document.getElementById(modalId);
+        if (modal) {
+          modal.style.display = 'none';
           document.body.style.overflow = 'auto';
-          previewImg.style.display = 'none';
-          previewImg.src = '';
+        }
+      }
+
+      // Fechar modal clicando fora dele
+      window.onclick = function(event) {
+        const modals = document.querySelectorAll('.modal');
+        modals.forEach(modal => {
+          if (event.target === modal) {
+            modal.style.display = 'none';
+            document.body.style.overflow = 'auto';
+          }
+        });
+      }
+
+      // Fechar modal com a tecla ESC
+      document.addEventListener('keydown', function(event) {
+        if (event.key === 'Escape') {
+          const modals = document.querySelectorAll('.modal');
+          modals.forEach(modal => {
+            if (modal.style.display === 'block') {
+              modal.style.display = 'none';
+              document.body.style.overflow = 'auto';
+            }
+          });
         }
       });
-
-      // Preview da imagem
-      projectImgFile.onchange = function(e) {
-        const file = e.target.files[0];
-        if (file) {
-          const reader = new FileReader();
-          reader.onload = function(ev) {
-            previewImg.src = ev.target.result;
-            previewImg.style.display = 'block';
-          };
-          reader.readAsDataURL(file);
-        } else {
-          previewImg.style.display = 'none';
-          previewImg.src = '';
-        }
-      };
-
-      // Adicionar projeto dinamicamente com imagem
-      projectForm.onsubmit = function(e) {
-        e.preventDefault();
-        const name = document.getElementById('projectName').value;
-        const desc = document.getElementById('projectDesc').value;
-        const link = document.getElementById('projectLink').value;
-        let imgSrc = '';
-        if (projectImgFile.files[0]) {
-          imgSrc = previewImg.src;
-        } else {
-          imgSrc = 'img/bg.png'; // imagem padrão se não enviar
-        }
-
-        // Cria o card do projeto
-        const card = document.createElement('div');
-        card.className = 'projectos-card';
-        card.innerHTML = `
-          <a href="${link}" target="_blank">
-            <img src="${imgSrc}" alt="${name}" class="projecto-imagem" />
-          </a>
-          <div class="caixa-texto-projectos">
-            <h3 class="info-projectos">${name}</h3>
-            <p class="paragrafo-projectos">${desc}</p>
-          </div>
-        `;
-
-        // Adiciona o card na primeira caixa de projetos
-        const caixas = document.getElementsByClassName('projectos-caixa');
-        if (caixas.length > 0) {
-          caixas[0].prepend(card);
-        }
-
-        // Limpa e fecha o modal
-        projectForm.reset();
-        addProjectModal.style.display = 'none';
-        document.body.style.overflow = 'auto';
-        previewImg.style.display = 'none';
-        previewImg.src = '';
-      };
     </script>
   </body>
   <footer class="footer">
