Add Instagram icon to footer for enhanced social media presence

--- a/index.html
+++ b/index.html
@@ -562,6 +562,17 @@
             alt="LinkedIn"
           />
         </a>
+         <a
+          href="https://instagram.com/bartolomeu_gaspar_"
+          target="_blank"
+          aria-label="Instagram"
+        >
+          <img
+            src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/instagram/instagram-original.svg"
+            width="28"
+            alt="Instagram"
+          />
+        </a>
       </div>
     </div>
   </footer>
